@@ -4,6 +4,7 @@ Legend:
 [B] Bug fixed
 [K] Known issue
 [O] Other
+[A] API semantics
 
 Change log
 ==========
@@ -13,6 +14,8 @@ v0.10.3
 [O] added cclockid class to prevent invalid use of class ctimespec
 [B] crofconn: fixed potential race condition causing a Hello expiration
 [+] crofsock: use SO_LINGER option for coordinated shutdown
+[A] crofchan: send CLOSE notification to application when replacing
+    an existing connection object (restart)
 
 v0.10.2
 
